<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lecx_mobile.views.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_quiz_discover"
        android:name="com.example.lecx_mobile.views.quiz.QuizDiscoverFragment"
        android:label="@string/title_quiz_discover"
        tools:layout="@layout/fragment_quiz_discover" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.lecx_mobile.views.profile.CurrentUserProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_current_user" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_products"-->
<!--        android:name="com.example.onlineshop.view.product.ProductFragment"-->
<!--        android:label="@string/title_products"-->
<!--        tools:layout="@layout/fragment_product" />-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_product_detail"-->
<!--        android:name="com.example.onlineshop.view.product.ProductDetailFragment"-->
<!--        android:label="Product Detail"-->
<!--        tools:layout="@layout/fragment_product_detail" >-->
<!--        <argument-->
<!--            android:name="productId"-->
<!--            app:argType="integer" />-->
<!--    </fragment>-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:name="com.example.onlineshop.view.dashboard.DashboardFragment"-->
<!--        android:label="@string/title_dashboard"-->
<!--        tools:layout="@layout/fragment_dashboard" />-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:name="com.example.onlineshop.view.notifications.NotificationsFragment"-->
<!--        android:label="@string/title_notifications"-->
<!--        tools:layout="@layout/fragment_notifications" />-->
</navigation>